--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -1,1 +1,29 @@
 <h1>add a new event!</h1>
+<%#
+<form method="POST" action="/events">
+  <div>
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title" required>
+  </div>
+  <div>
+    <label for="address">Address</label>
+    <input type="text" name="address" id="address" required>
+  </div>
+  <div>
+    <label for="date">Date</label>
+    <input type="date" name="date" id="date" required>
+  </div>
+  <div>
+    <label for="description">Description</label>
+    <input type="text" name="image" id="image" required>
+  </div>
+  <div>
+    <label for="image">Industry</label>
+    <input type="text" name="image" id="image" required>
+  </div>
+  <div>
+    <label for="image">image</label>
+    <input type="text" name="image" id="image" required>
+  </div>
+  <button class="button">Add Hotel</button>
+</form>%>
