--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,1 +1,44 @@
 <h1>edit the event</h1>
+<form method="POST" action="/events/<%= event.id %>">
+  <input type="hidden" name="_method" value="PUT">
+  <div>
+    <label for="title">Title</label>
+    <input type="text" name="title" id="title" value="<%= event.title %>" required>
+  </div>
+  <div>
+    <label for="address">Address</label>
+    <input type="text" name="address" id="address" value="<%= event.address %>" required>
+  </div>
+  <%# <div>
+    <label for="date">Date</label>
+    <input type="date" name="date" id="date" required>
+  </div>%>
+  <div>
+    <label for="description">Description</label>
+    <input type="text" name="description" id="description" value="<%= event.description %>" required>
+  </div>
+  <div>
+    <label for="industry">Industry</label>
+    <select class="form-control" id="industry" name="industry">
+      <option>Health & Wellness</option>
+      <option>Sports & Fitness</option>
+      <option>Photography</option>
+      <option>Food & Drink</option>
+      <option>Music</option>
+      <option>Film</option>
+      <option>Dance</option>
+      <option>Sci-Fi & Games</option>
+      <option>Books</option>
+      <option>Pets</option>
+      <option>Arts & Crafts</option>
+      <option>Fashion & Beauty</option>
+      <option>Career and Learning</option>
+      <option>Tech</option>
+    </select>
+  </div>
+  <div>
+    <label for="image">image</label>
+    <input type="text" name="image" id="image" value="<%= event.image %>" required>
+  </div>
+  <button class="button">Submit changes</button>
+</form>
