--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -1,5 +1,5 @@
 <h1>add a new event!</h1>
-<%#
+
 <form method="POST" action="/events">
   <div>
     <label for="title">Title</label>
@@ -7,23 +7,38 @@
   </div>
   <div>
     <label for="address">Address</label>
-    <input type="text" name="address" id="address" required>
+    <input id=“pac-input” class=“controls” type=“text” name=“address” required>
   </div>
-  <div>
+  <%# <div>
     <label for="date">Date</label>
     <input type="date" name="date" id="date" required>
-  </div>
+  </div>%>
   <div>
     <label for="description">Description</label>
-    <input type="text" name="image" id="image" required>
+    <input type="text" name="description" id="description" required>
   </div>
   <div>
-    <label for="image">Industry</label>
-    <input type="text" name="image" id="image" required>
+    <label for="industry">Industry</label>
+    <select class="form-control" id="industry" name="industry">
+      <option>Health & Wellness</option>
+      <option>Sports & Fitness</option>
+      <option>Photography</option>
+      <option>Food & Drink</option>
+      <option>Music</option>
+      <option>Film</option>
+      <option>Dance</option>
+      <option>Sci-Fi & Games</option>
+      <option>Books</option>
+      <option>Pets</option>
+      <option>Arts & Crafts</option>
+      <option>Fashion & Beauty</option>
+      <option>Career and Learning</option>
+      <option>Tech</option>
+    </select>
   </div>
   <div>
     <label for="image">image</label>
     <input type="text" name="image" id="image" required>
   </div>
-  <button class="button">Add Hotel</button>
-</form>%>
+  <button class="button">Add new event</button>
+</form>
