--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,36 +7,48 @@
   <script src="/js/app.js" charset="utf-8"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+<body style="background-color:#f7f7f7;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Ketchup</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Ketchup</a>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav  mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/events/">Events</a>
+          <a class="nav-link" href="/events">Events</a>
         </li>
       </ul>
-      <ul class="navbar-right navbar-nav mt-2 mt-lg-0">
+
+      <ul class="navbar-right navbar-nav  mt-2 mt-lg-0">
         <% if (locals.isLoggedIn) { %>
-          <a class="nav-link" href="/events/new">Add event</a>
-          <a class="nav-link" href="/logout">Logout</a>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/events/new">Add event</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/logout">Logout</a>
+          </li>
           <% } else { %>
-            <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Register</a>
-          <% } %>
-      </ul>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/register">Register</a>
+         </li>
+       <% } %>
+     </ul>
+
     </div>
   </nav>
   <% for (const type in messages) { %>
     <p class="alert alert-<%= type %>"><%= messages[type] %></p>
   <% } %>
   <%- body %>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 </body>
 </html>
