--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -1,15 +1,15 @@
 <div class="topMargin">
   <div class="container">
     <div class="row">
-        <% events.forEach((event) => { %>
-          <div class="col-4 imageGrid cardContainer">
-            <div class="imageSizing img-fluid" style="background-image: url(<%= event.image %>); height: 300px; width: 400px;"></div>
-            <div class="cardContent">
-              <a href="/events/<%= event.id %>"><h5><%= event.title %></h3></a>
-              <h6><%= event.industry %></h3>
+      <% events.forEach((event) => { %>
+        <div class="col-5 imageGrid cardContainer box-shadow-all">
+          <div class="imageSizing img-fluid" style="background-image: url(<%= event.image %>); height: 300px; width: 100%;"></div>
+          <div class="cardContent">
+            <a href="/events/<%= event.id %>"><h5><%= event.title %></h3></a>
+            <h6><%= event.industry %></h3>
             </div>
-          </div>
+        </div>
         <% }); %>
+      </div>
     </div>
-  </div>
 </div>
