--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,1 +1,5 @@
-<h1>WDI Project 2</h1>
+<div class="homepageImage">
+  <div id="overlay">
+    <h1 class="homepageText">Find and create catch up events. Explore and inspire!</h1>
+  </div>
+</div>
