--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,12 +32,137 @@ body {
   text-align: center;
 }
 
-a h5{
-  text-decoration: none;
-  text-transform: none;
-  color: black;
+
+.navbar-dark .navbar-brand {
+  color: orange;
+  font-weight: bold;
 }
 
-.box-shadow-all {
-  box-shadow: 0 0 5px #333;
+a:hover {
+  text-decoration: none;
+}
+
+a {
+  h6{
+    text-decoration: none;
+    text-transform: none;
+    color: black;
+  }
+  h5{
+    text-decoration: none;
+    text-transform: none;
+    color: black;
+  }
+}
+
+//nav bar hover
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+  transition: all .5s;
+}
+nav ul li a:hover {
+  color: #555;
+}
+
+//stroke
+nav.stroke ul li a,
+nav.fill ul li a {
+  position: relative;
+}
+
+nav.stroke ul li a:after,
+nav.fill ul li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: orange;
+  height: 1px;
+}
+
+nav.stroke ul li a:hover:after {
+  width: 100%;
+}
+
+.comment-box{
+  border: solid 1px grey;
+}
+
+.shadow {
+  -webkit-box-shadow: 0 8px 6px -8px black;
+   -moz-box-shadow: 0 8px 6px -8px black;
+        box-shadow: 0 8px 6px -8px black;
+}
+
+.form-group, .alert{
+  text-align: center;
+}
+
+.formWidth{
+  width: 60%;
+}
+
+.formMargin{
+  margin-top: 50px;
+}
+
+.homepageImage{
+  background: url('https://knockoutmag.com/wp-content/uploads/2016/07/Boardgames.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 800px;
+}
+
+.homepageText{
+  color: white;
+  width: 50%;
+  text-align: center;
+  text-shadow: 2px 2px #585757;
+  margin: 0 auto;
+  font-size: 60px;
+  padding-top: 200px;
+  font-family: 'Kaushan Script', cursive;
+}
+
+#overlay {
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.4); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+}
+
+.commentsContainer{
+  width: 50%;
+}
+
+.allComments{
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.underline{
+  border-bottom: 1px solid lightGrey;
+  font-weight: bold;
+}
+
+.underlineTitle{
+  height: 1px;
+  width: 60%;
+  border-bottom: 1px solid lightGrey;
+  margin-left: 80px;
+  margin-bottom: 10px;
+
 }
