--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,25 +1,21 @@
-<h1>edit the event</h1>
-<form method="POST" action="/events/<%= event.id %>">
-  <input type="hidden" name="_method" value="PUT">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" name="title" id="title" value="<%= event.title %>" required>
-  </div>
-  <div>
-    <label for="address">Address</label>
-    <input type="text" name="address" id="address" value="<%= event.address %>" required>
-  </div>
-  <%# <div>
+<div class="container formMargin formWidth">
+  <form method="POST" action="/events/<%= event.id %>">
+    <div class="form-group">
+      <input type="text" class="form-control" value="<%= event.title %>" name="title" id="title" required>
+    </div>
+    <div class="form-group">
+      <input type=“text” class="form-control" value="<%= event.address %>" name="address" id="address"  required>
+    </div>
+    <%# <div>
     <label for="date">Date</label>
     <input type="date" name="date" id="date" required>
   </div>%>
-  <div>
-    <label for="description">Description</label>
-    <input type="text" name="description" id="description" value="<%= event.description %>" required>
+  <div class="form-group">
+    <input type="text" class="form-control" value="<%= event.description %>" name="description" id="description" required>
   </div>
-  <div>
-    <label for="industry">Industry</label>
-    <select class="form-control" id="industry" name="industry">
+  <div class="form-group">
+    <select class="form-control" id="industry" value="<%= event.industry %>"name="industry">
+      <option>Choose industry</option>
       <option>Health & Wellness</option>
       <option>Sports & Fitness</option>
       <option>Photography</option>
@@ -36,9 +32,9 @@
       <option>Tech</option>
     </select>
   </div>
-  <div>
-    <label for="image">image</label>
-    <input type="text" name="image" id="image" value="<%= event.image %>" required>
+  <div class="form-group">
+    <input type="text" class="form-control" value="<%= event.image %>" name="image" id="image" required>
   </div>
-  <button class="button">Submit changes</button>
+  <button class="button btn btn-primary btn-block">Add new event</button>
 </form>
+</div>
