--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,29 +1,28 @@
-<% if (locals.message) { %>
-  <div class="alert alert-primary">
-    <%= message %>
-  </div>
-<% } %>
+<div class="formMargin formWidth">
 
-<div class="row">
-  <div class="col-md-6 offset-md-3">
-    <form method="POST" action="/register">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" placeholder="Username..." name="username">
-      </div>
-      <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" placeholder="Email..." name="email">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" placeholder="Password..." name="password">
-      </div>
-      <div class="form-group">
-        <label for="passwordConfirmation">Confirm password</label>
-        <input type="password" class="form-control" placeholder="Password..." name="passwordConfirmation">
-      </div>
-      <button type="submit" class="btn btn-primary btn-block">Register</button>
-    </form>
+  <% if (locals.message) { %>
+    <div class="alert alert-primary">
+      <%= message %>
+    </div>
+  <% } %>
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <form method="POST" action="/register">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Username..." name="username">
+        </div>
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="Email..." name="email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password..." name="password">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password..." name="passwordConfirmation">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Register</button>
+      </form>
+    </div>
   </div>
 </div>
