--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -6,10 +6,10 @@
     <div class="form-group">
       <input type=“text” class="form-control" placeholder="Address..." name="address" id="address"  required>
     </div>
-    <%# <div>
+    <div>
     <label for="date">Date</label>
     <input type="date" name="date" id="date" required>
-  </div>%>
+  </div>
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Description..." name="description" id="description" required>
   </div>
