--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -2,15 +2,17 @@
   <div class="container">
     <div class="row">
       <% events.forEach((event) => { %>
-        <div class="col-5 imageGrid cardContainer shadow">
-          <a href="/events/<%= event.id %>">
-            <div class="imageSizing img-fluid" style="background-image: url(<%= event.image %>); height: 300px; width: 100%;"></div>
-            <div class="cardContent">
-              <h5><%= event.title %></h5>
-              <div class="underlineTitle"></div>
-              <h6><%= event.industry %></h6>
-            </div>
-          </a>
+        <div class="col-6">
+          <div class="imageGrid cardContainer shadow">
+            <a href="/events/<%= event.id %>">
+              <div class="imageSizing img-fluid" style="background-image: url(<%= event.image %>); height: 300px; width: 100%;"></div>
+              <div class="cardContent">
+                <h5><%= event.title %></h5>
+                <div class="underlineTitle"></div>
+                <h6><%= event.industry %></h6>
+              </div>
+            </a>
+          </div>
         </div>
         <% }); %>
       </div>
