--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -6,31 +6,30 @@
     <div class="form-group">
       <input type=“text” class="form-control" placeholder="Address..." name="address" id="address"  required>
     </div>
-    <div>
-    <label for="date">Date</label>
-    <input type="date" name="date" id="date" required>
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" placeholder="Description..." name="description" id="description" required>
-  </div>
-  <div class="form-group">
-    <select class="form-control" id="industry" name="industry">
-      <option>Choose industry</option>
-      <option>Health & Wellness</option>
-      <option>Sports & Fitness</option>
-      <option>Photography</option>
-      <option>Food & Drink</option>
-      <option>Music</option>
-      <option>Film</option>
-      <option>Dance</option>
-      <option>Sci-Fi & Games</option>
-      <option>Books</option>
-      <option>Pets</option>
-      <option>Arts & Crafts</option>
-      <option>Fashion & Beauty</option>
-      <option>Career and Learning</option>
-      <option>Tech</option>
-    </select>
+    <div class="form-group">
+      <input type="date" class="form-control" name="date" id="date" required>
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Description..." name="description" id="description" required>
+    </div>
+    <div class="form-group">
+      <select class="form-control" id="industry" name="industry">
+        <option>Choose industry</option>
+        <option>Health & Wellness</option>
+        <option>Sports & Fitness</option>
+        <option>Photography</option>
+        <option>Food & Drink</option>
+        <option>Music</option>
+        <option>Film</option>
+        <option>Dance</option>
+        <option>Sci-Fi & Games</option>
+        <option>Books</option>
+        <option>Pets</option>
+        <option>Arts & Crafts</option>
+        <option>Fashion & Beauty</option>
+        <option>Career and Learning</option>
+        <option>Tech</option>
+      </select>
   </div>
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Image URL..." name="image" id="image" required>
