--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -1,5 +1,23 @@
 <div class="topMargin">
   <div class="container">
+    <div id="myBtnContainer">
+        <a href="/events" class="btn nonActive btn-sm btnFilter" >Show all</a>
+        <a href="/events/filter/health" class="btn nonActive btn-sm btnFilter" >Health & Wellness</a>
+        <a href="/events/filter/sports" class="btn nonActive btn-sm btnFilter" >Sport & Fitness</a>
+        <a href="/events/filter/photo" class="btn nonActive btn-sm btnFilter" >Photography</a>
+        <a href="/events/filter/food" class="btn nonActive btn-sm btnFilter" >Food & Drink</a>
+        <a href="/events/filter/music" class="btn nonActive btn-sm btnFilter" >Music</a>
+        <a href="/events/filter/film" class="btn nonActive btn-sm btnFilter" >Film</a>
+        <a href="/events/filter/dance" class="btn nonActive btn-sm btnFilter" >Dance</a>
+        <a href="/events/filter/scifi" class="btn nonActive btn-sm btnFilter" >Sci-Fi & Games</a>
+        <a href="/events/filter/books" class="btn nonActive btn-sm btnFilter" >Books</a>
+        <a href="/events/filter/pets" class="btn nonActive btn-sm btnFilter" >Pets</a>
+        <a href="/events/filter/arts" class="btn nonActive btn-sm btnFilter" >Arts & Crafts</a>
+        <a href="/events/filter/tech" class="btn nonActive btn-sm btnFilter" >Tech</a>
+        <a href="/events/filter/fashion" class="btn nonActive btn-sm btnFilter" >Fashion & Beauty</a>
+        <a href="/events/filter/career" class="btn nonActive btn-sm btnFilter" >Career & Learning</a>
+
+    </div>
     <div class="row">
       <% events.forEach((event) => { %>
         <div class="col-6">
@@ -15,6 +33,7 @@
           </div>
         </div>
         <% }); %>
+
       </div>
     </div>
 </div>
