--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -27,7 +27,7 @@
         <option>Pets</option>
         <option>Arts & Crafts</option>
         <option>Fashion & Beauty</option>
-        <option>Career and Learning</option>
+        <option>Career & Learning</option>
         <option>Tech</option>
       </select>
   </div>
