--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,13 @@ a {
   }
 }
 
+a {
+  &.btnFilter:hover{
+    background-color: orange;
+    color: white;
+  }
+}
+
 //nav bar hover
 nav ul li a,
 nav ul li a:after,
@@ -176,4 +183,56 @@ nav.stroke ul li a:hover:after {
   background-color: lightGrey;
   margin: 0 0 7px 7px;
   border-radius: 10px;
+}
+
+.container {
+    overflow: hidden;
+}
+
+.filterDiv {
+    float: left;
+    background-color: #2196F3;
+    color: #ffffff;
+    width: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin: 2px;
+    display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  cursor: pointer;
+}
+
+.btnFilter {
+  margin: 2px;
+}
+
+/* Add a light grey background on mouse-over */
+
+/* Add a dark background to the active button */
+a{
+  &.nonActive {
+    background-color: #666;
+    color: white;
+  }
+}
+
+
+.btn-sm{
+  font-size: 14px;
+  padding: 2px 10px;
+}
+
+.fa-envelope, .fa-key {
+  margin-top: 10px;
 }
