--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -9,19 +9,25 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <form method="POST" action="/register">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Username..." name="username">
+        <div class="form-group row">
+          <i class="fa fa-user col-2" aria-hidden="true"></i>
+          <input type="text" class="form-control col-10" placeholder="Username..." name="username">
         </div>
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email..." name="email">
+        <div class="form-group row">
+          <i class="fa fa-envelope col-2" aria-hidden="true"></i>
+          <input type="email" class="form-control col-10" placeholder="Email..." name="email">
         </div>
-        <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password..." name="password">
+        <div class="form-group row">
+          <i class="fa fa-key col-2" aria-hidden="true"></i>
+          <input type="password" class="form-control col-10" placeholder="Password..." name="password">
         </div>
-        <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password..." name="passwordConfirmation">
+        <div class="form-group row">
+          <i class="fa fa-key col-2" aria-hidden="true"></i>
+          <input type="password" class="form-control col-10" placeholder="Password..." name="passwordConfirmation">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
+        <div class="row">
+          <button type="submit" class="btn btn-info col-12">Register</button>
+        </div>
       </form>
     </div>
   </div>
